--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -12,14 +12,13 @@
 {% block extra_title %}Contact Us{% endblock %}
 {% block content %}
 <div class="overlay"></div>
-<div class="container bg-sheer-white text-brown">
-    <h1 class="small-caps bold">Contact Us</h1>
+<div class="container bg-sheer-white">
     <div class="row">
         <div class="col s12 contact-container">
+            <h1 class="small-caps bold">Contact Us</h1>
             <form action="{% url 'contact_us' %}" method="POST" class="contact-form">
                 {% csrf_token %}
                 {{ form| crispy }}
-                <!--Crispy form missing a closing div tag-->
                 <div class="center-align">
                     <button class="btn btn-black rounded-0 text-uppercase mt-5 block" id="submit-review-btn" type="submit" name="action">
                         <i class="fas fa-envelope"></i> Send Mail
