Updated mobile top header to include a ul parent list

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -430,6 +430,8 @@ padding-left: 10px;
   background-color: rgba(87, 202, 255, 1);
 }
 
+/* Changes to Margins and Padding */
+
 .content {
   min-height: calc(100vh - 70px);
 }
