--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+    background: url("/media/homepage_background_cropped.jpg") no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: "Lato";
 }
 
 /* from Bulma */
@@ -70,7 +70,7 @@ body {
 }
 
 .logo-text {
-    color: rgba(87, 202, 255, 1)
+    color: rgba(87, 202, 255, 1);
 }
 
 .border-black {
@@ -82,13 +82,13 @@ body {
 }
 
 .overlay {
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-	position: fixed;
-	background: white;
-	z-index: -1;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
@@ -110,7 +110,7 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
-input[name='q']::placeholder {
+input[name="q"]::placeholder {
     color: #aab7c4;
 }
 
@@ -133,10 +133,10 @@ input[name='q']::placeholder {
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
-    width: 0; 
-    height: 0; 
+    width: 0;
+    height: 0;
     border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
+    border-right: 4px solid transparent;
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
@@ -186,9 +186,9 @@ input[name='q']::placeholder {
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-  .container {
-    max-width: 80%;
-  }
+    .container {
+        max-width: 80%;
+    }
 }
 
 /* Allauth form formatting */
@@ -203,7 +203,7 @@ input[name='q']::placeholder {
     border-radius: 0;
 }
 
-.allauth-form-inner-content label:not([for='id_remember']) {
+.allauth-form-inner-content label:not([for="id_remember"]) {
     display: none;
 }
 
@@ -212,9 +212,9 @@ input[name='q']::placeholder {
 }
 
 .allauth-form-inner-content button,
-.allauth-form-inner-content input[type='submit'] {
-	/* btn */
-	display: inline-block;
+.allauth-form-inner-content input[type="submit"] {
+    /* btn */
+    display: inline-block;
     font-weight: 400;
     color: #fff;
     text-align: center;
@@ -225,24 +225,24 @@ input[name='q']::placeholder {
     user-select: none;
     background-color: #000;
     border: 1px solid #000;
-    padding: .375rem .75rem;
+    padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0;
 
     /* standard bootstrap btn transitions */
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .allauth-form-inner-content button:hover,
-.allauth-form-inner-content input[type='submit']:hover {	
-	color: #fff;
+.allauth-form-inner-content input[type="submit"]:hover {
+    color: #fff;
     background-color: #222;
     border-color: #222;
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+    color: #17a2b8; /* text-info */
 }
 
 /* Product Form */
@@ -267,12 +267,11 @@ input[name='q']::placeholder {
     border-color: #dc3545;
 }
 
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
 }
-
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
@@ -312,27 +311,28 @@ input[name='q']::placeholder {
     }
 
     .navbar-toggler {
-        padding: .6rem .6rem;
+        padding: 0.6rem 0.6rem;
         font-size: 1rem;
     }
 
     #delivery-banner h4 {
-        font-size: .9rem;
+        font-size: 0.9rem;
     }
 
     .btn.btn-outline-black.rounded-0,
     .btn.btn-black.rounded-0 {
-        padding: .375rem .375rem;
+        padding: 0.375rem 0.375rem;
     }
 
     .btn.btn-outline-black.rounded-0.btn-lg,
     .btn.btn-black.rounded-0.btn-lg {
-        padding: .375rem .375rem;
-        font-size: .75rem;
+        padding: 0.375rem 0.375rem;
+        font-size: 0.75rem;
     }
 
-    .increment-qty, .decrement-qty {
-        padding: .25rem .5rem !important;
+    .increment-qty,
+    .decrement-qty {
+        padding: 0.25rem 0.5rem !important;
     }
 }
 
@@ -378,67 +378,66 @@ input[name='q']::placeholder {
     margin-top: 50px;
 }
 
-/* -------------/* Footer */------------------ */
-
-.footer-item {
-  padding-top: 50px;
-  overflow: hidden;
+/* -------------/* Footer */
+------------------ */ .footer-item {
+    padding-top: 50px;
+    overflow: hidden;
 }
 
 .footer-item-weather {
-  padding-top: 5px;
+    padding-top: 5px;
 }
 
 .social {
-  font-size: 32px;
+    font-size: 32px;
 }
 
 .social i {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  font-size: 40px;
-  text-align: center;
-  color: #ffffff;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 40px;
+    text-align: center;
+    color: #ffffff;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
 }
 
 .social li a i:hover {
-  color: rgba(0, 136, 122, 1);
+    color: rgba(0, 136, 122, 1);
 }
 
 .contact {
-padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  font-size: 40px;
-  text-align: center;
-  color: #ffffff;
-  -webkit-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 40px;
+    text-align: center;
+    color: #ffffff;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
 }
 
-.contact:hover{
+.contact:hover {
     color: rgba(0, 136, 122, 1);
     text-decoration: none;
 }
 
 .container-wrapper-blue {
-  background-color: rgba(87, 202, 255, 1);
+    background-color: rgba(87, 202, 255, 1);
 }
 
 /* Changes to Margins and Padding */
 
 .content {
-  min-height: calc(100vh - 70px);
+    min-height: calc(100vh - 70px);
 }
 
 .footer {
-  height: 50px;
-  margin-top: 50px;
+    height: 50px;
+    margin-top: 50px;
 }
 
 .wishlist-icon {
