--- a/templates/404.html
+++ b/templates/404.html
@@ -4,12 +4,13 @@
 {% block add_title %}404{% endblock %}
 
 {% block content%}
+<div class="overlay"></div>
     <div class="container text-center">
         <h1>Sorry</h1>
         <p class="fs-6">It looks like the page you're looking for does not exist.</p>
         <p>Keep calm and get a cocktail.</p>
         <div class="my-5">
-            <a href="{% url 'products' %}" class="button">Return to Products</a>
+            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Return to Products</a>
         </div>
     </div>
 {% endblock %}
