--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 
     <title>Speakeasy {% block extra_title %}{% endblock %}</title>
 </head>
-
+<!-- Top NavBar -->
 <body>
     <div class="content">
         <header class="container-fluid fixed-top">
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </header>
-
+<!-- Toast Messages -->
         {% if messages %}
         <div class="message-container">
             {% for message in messages %}
@@ -163,7 +163,7 @@
         {% block content %}
         {% endblock %}
     </div>
-
+<!-- Standard Footer Used throughout site -->
     <footer class="container-fluid container-wrapper-blue">
         <div class="row text-center">
             <div class="col-sm-4 footer-item">
@@ -183,7 +183,6 @@
                     </li>
                 </ul>
             </div>
-            <!------------------------------Shop Now------------------------------>
             <div class="col-sm-4 text-center">
 
             </div>
