Added prefix to CSS using autoprefixer

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -71,7 +71,7 @@
                                     <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
-
+<!-- Below includes adjust and optimise sizing on mobile devices -->
                             {% for item in bag_items %}
                                 <tr>
                                     <td class="p-3 w-25">
