--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
 
 {% block content%}
 <div class="overlay"></div>
-    <div class="container text-center">
+    <div class="error-container text-center">
         <h1>Sorry</h1>
         <p class="fs-6">It looks like there is an issue with the page you are trying to reach.</p>
         <p>Please call back later or take a look at our products</p>
