--- a/templates/500.html
+++ b/templates/500.html
@@ -3,6 +3,15 @@
 
 {% block add_title %}500{% endblock %}
 
+
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content%}
 <div class="overlay"></div>
     <div class="error-container text-center">
